5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_2425.log
== SUBMITION (2019-04-02 00:02:55) 
-- CODE:
km = float(input("Distancia (Em Km): "))
1 = float(input("Consumo (Em 1): "))

Print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.169034
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 2
    1 = float(input())
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:02:56) 
-- CODE:
km = float(input("Distancia (Em Km): "))
1 = float(input("Consumo (Em 1): "))

Print(round(km / 1, 3), "Km/1")
-- ERROR:
File "XXXX", line 2
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:03:25) 
-- CODE:
km = float(input("Distancia (Em Km): "))
1 = float(input("Consumo (Em 1): "))

print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.129746
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 2
    1 = float(input())
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:03:38) 
-- CODE:
km = float(input("Distancia (Em Km): "))
l = float(input("Consumo (Em 1): "))

print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.14674
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:03:39) 
-- CODE:
km = float(input("Distancia (Em Km): "))
l = float(input("Consumo (Em 1): "))

print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.224984
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:03:46) 
-- CODE:
km = float(input("Distancia (Em Km): "))
l = float(input("Consumo (Em 1): "))

print(round(km / 1, 3), "Km/1")
-- OUTPUT:
28.572 Km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:03:58) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.136383
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:03:59) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / 1, 3), "Km/1")
-- OUTPUT:
28.572 Km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:04:27) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / 1, 3), "Km/1")
-- EXECUTION TIME:
0.250501
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
2254.0 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
4554.0 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:04:45) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / l, 3), "Km/1")
-- EXECUTION TIME:
0.141723
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:04:46) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / l, 3), "Km/1")
-- OUTPUT:
14.286 Km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:04:48) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / l, 3), "Km/1")
-- EXECUTION TIME:
0.197226
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/1
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/1
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:04:53) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print(round(km / l, 3), "Km/l")
-- EXECUTION TIME:
0.201656
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:06:39) 
-- CODE:
km = float(input("Distancia (em Km): "))
l = float(input("Consumo (em 1): "))

print (round (km/l, 3), "km/l")
-- EXECUTION TIME:
0.115725
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:47:38) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(consumo)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:48:30) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 2, km/l)
-- ERROR:
File "XXXX", line 8
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:48:38) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 2, km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(consumo, 2, km/l))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:48:46) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 2, km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(consumo, 2, km/l))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:49:09) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 2, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(consumo, 2, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:49:28) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo,"km/l", 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(consumo,"km/l", 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:50:12) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:50:23) 
-- CODE:
# Entradas
km = float(input("Distancia: "))
l = float(input("Gasto de combustivel: "))
# Variavel
consumo = km / l
# Saida
print(round(consumo, 3), "km/l")
-- EXECUTION TIME:
0.226746
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
